<resources>
    <string name="app_name">Car Tracking</string>
    <string name="title_activity_maps">Car View</string>
    <string name="control_label">Control Board</string>
    <string name="car_not_moving">Get Car Location Static</string>
    <string name="car_moving">Get Car Location</string>
    <string name="auth">Authenticate</string>
    <string name="config">Set New Configuration</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="ip">IP (Admin Access)</string>
    <string name="port">Port (Admin Access)</string>
    <string name="phone_number">Phone Number (Admin Access)</string>
    <string name="key">Key</string>
    <string name="xor_num">XOR Number</string>
    <string name="time_interval">Server Update Time Interval</string>
</resources>
