<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="#305195" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:text="@string/control_label"
                android:textColor="#FFCC00"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <Button
                android:id="@+id/carSmsButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bt_shape"
                android:onClick="viewCarSMS"
                android:text="@string/car_not_moving"
                android:textColor="#d3d3d3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <Button
                android:id="@+id/carButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bt_shape"
                android:onClick="viewCar"
                android:text="@string/car_moving"
                android:textColor="#d3d3d3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <Button
                android:id="@+id/authButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bt_shape"
                android:onClick="authenticate"
                android:text="@string/auth"
                android:textColor="#d3d3d3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <Button
                android:id="@+id/configButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/bt_shape"
                android:onClick="setConfig"
                android:text="@string/config"
                android:textColor="#d3d3d3"
                android:enabled="false"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>